chore: setup test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: go
 
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test ./crypto_test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 git:
   depth: 1
