--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - go get -t -v ./...
 
 script:
-  - go test ./crypto_test -race -coverprofile=coverage.txt -covermode=atomic
+  - go test ./crypto -race -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
